# payya

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/agent/payya-agent/: Cargo.toml
crates/agent/payya-agent/src/: lib.rs
crates/agent/payya-code-interpreter/: Cargo.toml
crates/agent/payya-code-interpreter/src/: lib.rs
crates/agent/payya-function-call/: Cargo.toml
crates/agent/payya-function-call/src/: lib.rs
crates/agent/payya-reasoner/: Cargo.toml
crates/agent/payya-reasoner/src/: lib.rs
crates/agent/payya-semantic-router/: Cargo.toml
crates/agent/payya-semantic-router/src/: lib.rs
crates/agent/payya-structured-output/: Cargo.toml
crates/agent/payya-structured-output/src/: lib.rs
crates/core/payya-autograd/: Cargo.toml
crates/core/payya-autograd/examples/: xor_mlp.rs
crates/core/payya-autograd/src/: lib.rs
crates/core/payya-autograd/tests/: xor_training.rs
crates/core/payya-flash-attention/: Cargo.toml
crates/core/payya-flash-attention/src/: lib.rs
crates/core/payya-logit-processor/: Cargo.toml
crates/core/payya-logit-processor/src/: lib.rs
crates/core/payya-matmul/: Cargo.toml
crates/core/payya-matmul/src/: lib.rs
crates/core/payya-softmax/: Cargo.toml
crates/core/payya-softmax/src/: lib.rs
crates/core/payya-tokenizer/: Cargo.toml
crates/core/payya-tokenizer/examples/: tokenize.rs
crates/core/payya-tokenizer/src/: gpt2.rs  lib.rs  train.rs
crates/core/payya-tokenizer/tests/: round_trip.rs
crates/data/payya-data-curation/: Cargo.toml
crates/data/payya-data-curation/src/: lib.rs
crates/data/payya-db-driver/: Cargo.toml
crates/data/payya-db-driver/src/: lib.rs
crates/data/payya-feature-store/: Cargo.toml
crates/data/payya-feature-store/src/: lib.rs
crates/data/payya-graph-rag/: Cargo.toml
crates/data/payya-graph-rag/src/: lib.rs
crates/data/payya-knowledge-graph/: Cargo.toml
crates/data/payya-knowledge-graph/src/: lib.rs
crates/data/payya-rag/: Cargo.toml
crates/data/payya-rag/src/: lib.rs
crates/data/payya-recommendation/: Cargo.toml
crates/data/payya-recommendation/src/: lib.rs
crates/data/payya-synthetic-data/: Cargo.toml
crates/data/payya-synthetic-data/src/: lib.rs
crates/data/payya-text-to-sql/: Cargo.toml
crates/data/payya-text-to-sql/src/: lib.rs
crates/data/payya-vector-db/: Cargo.toml
crates/data/payya-vector-db/src/: lib.rs
crates/inference/payya-kv-cache/: Cargo.toml
crates/inference/payya-kv-cache/src/: lib.rs
crates/inference/payya-prompt-cache/: Cargo.toml
crates/inference/payya-prompt-cache/src/: lib.rs
crates/inference/payya-quantization/: Cargo.toml
crates/inference/payya-quantization/src/: lib.rs
crates/inference/payya-server/: Cargo.toml
crates/inference/payya-server/src/: lib.rs
crates/inference/payya-speculative/: Cargo.toml
crates/inference/payya-speculative/src/: lib.rs
crates/infra/payya-gateway/: Cargo.toml
crates/infra/payya-gateway/src/: lib.rs
crates/infra/payya-model-merger/: Cargo.toml
crates/infra/payya-model-merger/src/: lib.rs
crates/models/payya-audio-spectrogram/: Cargo.toml
crates/models/payya-audio-spectrogram/src/: lib.rs
crates/models/payya-clip/: Cargo.toml
crates/models/payya-clip/src/: lib.rs
crates/models/payya-diffusion/: Cargo.toml
crates/models/payya-diffusion/src/: lib.rs
crates/models/payya-embedding/: Cargo.toml
crates/models/payya-embedding/src/: lib.rs
crates/models/payya-moe/: Cargo.toml
crates/models/payya-moe/src/: lib.rs
crates/models/payya-slm/: Cargo.toml
crates/models/payya-slm/src/: lib.rs
crates/models/payya-ssm/: Cargo.toml
crates/models/payya-ssm/src/: lib.rs
crates/models/payya-transformer/: Cargo.toml
crates/models/payya-transformer/examples/: generate.rs
crates/models/payya-transformer/src/: lib.rs
crates/models/payya-vit/: Cargo.toml
crates/models/payya-vit/src/: lib.rs
crates/safety/payya-adversarial/: Cargo.toml
crates/safety/payya-adversarial/src/: lib.rs
crates/safety/payya-eval/: Cargo.toml
crates/safety/payya-eval/src/: lib.rs
crates/safety/payya-guardrails/: Cargo.toml
crates/safety/payya-guardrails/src/: lib.rs
crates/safety/payya-interpretability/: Cargo.toml
crates/safety/payya-interpretability/src/: lib.rs
crates/speech/payya-asr/: Cargo.toml
crates/speech/payya-asr/src/: lib.rs
crates/speech/payya-tts/: Cargo.toml
crates/speech/payya-tts/src/: lib.rs
crates/training/payya-distillation/: Cargo.toml
crates/training/payya-distillation/src/: lib.rs
crates/training/payya-distributed/: Cargo.toml
crates/training/payya-distributed/src/: lib.rs
crates/training/payya-dpo/: Cargo.toml
crates/training/payya-dpo/src/: lib.rs
crates/training/payya-lora/: Cargo.toml
crates/training/payya-lora/src/: lib.rs
crates/training/payya-nas/: Cargo.toml
crates/training/payya-nas/src/: lib.rs
crates/training/payya-peft/: Cargo.toml
crates/training/payya-peft/src/: lib.rs
crates/training/payya-rlhf/: Cargo.toml
crates/training/payya-rlhf/src/: lib.rs
scripts/: check-layers.sh  setup.sh
