[package]
name = "payya-autograd"
description = "Automatic differentiation engine (like Micrograd)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-matmul = { workspace = true }
payya-softmax = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
