[package]
name = "payya-tokenizer"
description = "Byte-Pair Encoding (BPE) tokenizer — train, encode, decode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[[example]]
name = "tokenize"
path = "examples/tokenize.rs"
