[package]
name = "payya-embedding"
description = "Embedding model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-autograd = { workspace = true }
payya-transformer = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
