[package]
name = "payya-slm"
description = "Small Language Model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-autograd = { workspace = true }
payya-logit-processor = { workspace = true }
payya-tokenizer = { workspace = true }
payya-transformer = { workspace = true }
payya-embedding = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
