[package]
name = "payya-transformer"
description = "Transformer from scratch (Attention Is All You Need)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-autograd = { workspace = true }
payya-logit-processor = { workspace = true }
payya-tokenizer = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
