[package]
name = "payya-lora"
description = "LoRA (Low-Rank Adaptation) trainer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-autograd = { workspace = true }
payya-transformer = { workspace = true }
payya-logit-processor = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
