[package]
name = "payya-peft"
description = "Parameter Efficient Fine-Tuning library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-autograd = { workspace = true }
payya-transformer = { workspace = true }
payya-lora = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
