[package]
name = "payya-rlhf"
description = "RLHF pipeline (PPO implementation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
payya-transformer = { workspace = true }
payya-logit-processor = { workspace = true }
rand = { workspace = true }
